work in progress

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         $.i18n.init({
             lng: lang,
             fallbackLng: 'en',
-            resGetPath: 'locales/__lng__?v=' + Date.now(),
+            resGetPath: 'translations/__lng__?v=' + Date.now(),
             useLocalStorage: true,
             ns: {
                 namespaces: ['app'], defaultNs: 'app'
